--- a/css/innerpage.css
+++ b/css/innerpage.css
@@ -58,6 +58,7 @@
         height: 25px;
     }
     #logo{
+        margin-left: 00px;
         height: 25px;
     }
     #search{
@@ -67,7 +68,7 @@
         margin-left: 70px;
     }
     #notification{
-        margin-left: 50px;
+        margin-left: 30px;
         height: 15px;
     }
     #profile{
@@ -79,7 +80,7 @@
         margin-left: 45px;
     }
     #downward{
-        margin-left: 10px;
+        margin-left: 00px;
         margin-top: 8px;
     }
 }
@@ -276,6 +277,13 @@ height: 20px;
         margin-left: 50px;
     }
 }
+
+@media(max-width:992px){
+    #name2,#textarea,#select{
+        width: 100%;
+        margin-left: 50px;
+    }
+}
 #two{
     margin-top: 30px;
     margin-left: 30px;
@@ -321,8 +329,19 @@ border-radius: 5px;
         margin-top: 10px;
        
     }
-
 }
+@media(max-width:992px){
+    #name3,#name4,#select2,#name5{
+        width: 100%;
+       margin-left: 50px;
+       
+    }
+    #name4,#select2,#name5{
+        margin-top: 10px;
+       
+    }
+}
+
 
 
 #three{
@@ -356,6 +375,15 @@ color: #3E3E3E;
 }   
 
 @media(max-width:576px){
+    #name6,#name7,#name8{
+        width: 100%;
+        margin-left: 50px;
+    }
+    #name6{
+        margin-left: 50px;
+    }
+}
+@media(max-width:992px){
     #name6,#name7,#name8{
         width: 100%;
         margin-left: 50px;
@@ -409,6 +437,14 @@ color: #3E3E3E;
         margin-left: 50px;
     }
 }
+@media(max-width:992px){
+    #name9,#name10,#name11,#select3{
+        width: 100%;
+        margin-top: 10px;
+        margin-left: 50px;
+    }
+}
+
 
 
 #other{
@@ -566,5 +602,102 @@ border-radius: 5px;
     #information,#success{
         margin-left: 30px;
         margin-top: 20px;
+    }
+}
+
+#action{
+    margin-top: 20px;
+    margin-left: 30px;
+    color: #3E3E3E;
+}
+#primary{
+    margin-top: 10px;
+    margin-left: 25px;
+    width: 145px;
+    height: 44px;
+    border: 1px solid #C8242F;
+    border-radius: 22px;
+    background-color: #C8242F;
+}
+#secondary{
+    margin-left: 10px;
+    width: 145px;
+    height: 44px;
+    border: 1px solid #C8242F;
+    border-radius: 22px;
+}
+#pri{
+    color: #FAFAFA;
+}
+#seco{
+    color: #C8242F;
+}
+
+
+#tab{
+    margin-top: 40px;
+    margin-left: 30px;
+    color: #3E3E3E;
+}
+.tabs{
+    border-bottom: #ADADAD;
+    display: flex;
+}
+#tab1{
+   
+   margin-left: 50px;
+    width: 37px;
+    height: 20px;
+    font: normal normal medium 15px/20px Roboto;    
+    color: #C8242F;
+}
+#tab2{
+    margin-left: 30px;
+    width: 37px;
+    height: 20px;
+    font: normal normal normal 15px/20px Roboto;
+    color: #ADADAD;
+}
+#tab3{
+    margin-left: 30px;
+    width: 37px;
+    height: 20px;
+    text-align: left;
+    font: normal normal normal 15px/20px Roboto;
+    letter-spacing: 0px;
+    color: #ADADAD;
+}
+#underline{
+   margin-left: 40PX;
+    width: 55px;
+    height: 0px;
+    border: 3px solid #C8242F;
+}
+#line1{
+    display: flex;
+    width: 100%;
+}
+#line{
+    margin-left: 00PX;
+    width: 100%;
+    height: 0px;
+    border: 1px solid #837a7a;
+}
+#loram{
+margin-left: 20px;
+margin-top: 15px;
+width: 100%;
+font: normal normal normal 15px/24px Roboto;
+color: #3E3E3E;
+font-size: 20px;
+}
+@media(max-width:576px){
+    #lorem{
+        width: 80%;
+    }
+}
+@media(max-width:576px){
+    #line1,#line{
+        width: 100%;
     }
 }
